# transfer-plan

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES_v1.0.md
src/: config.rs  lib.rs  main.rs  queue.rs  transfer.rs  ui.rs  unmount.rs  worker.rs
src/app/: checkpoint.rs  mod.rs  mounts.rs  preflight.rs
src/transfer/: copy.rs  format.rs  helpers.rs  mod.rs  progress.rs  verify.rs
src/ui/: banner.rs  editor.rs  flows.rs  mod.rs  printing.rs  prompts.rs  types.rs
src/unmount/: busy.rs  linux.rs  mod.rs
src/worker/: cleanup.rs  mod.rs  monitor.rs  pool.rs  progress_ui.rs  space.rs  sync.rs  types.rs  worker_loop.rs
tests/: end_to_end_transfer.rs
