[package]
name = "transfer-plan"
version = "2.1.0"
edition = "2021"

[dependencies]
# Async runtime for concurrent file transfers
tokio = { version = "1.35", features = ["full"] }

# UI and progress display
indicatif = "0.18.3"
console ="0.16.2"
dialoguer = "0.12.0"

# File operations and path handling
walkdir = "2.4"
notify = "8.1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Serialization for transfer queue persistence and config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Lock-free structures
crossbeam = "0.8"

# Better mutex for lock-free performance
parking_lot = "0.12"

# For better terminal output
colored = "3.1.1"

# Hashing for file verification
sha2 = "0.10"

# Lazy static for buffer pool
once_cell = "1.19"

# Linux copy_file_range() for kernel-assisted copies
nix = { version = "0.31.1", features = ["fs","zerocopy"] }

# libc
libc = "0.2.180"

# Terminal input with auto-completion
rustyline = { version = "17.0.2", features = ["derive", "with-fuzzy"] }

# Shell expansion for ~ and environment variables
shellexpand = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3.14"
